@@ -9,8 +9,9 @@ TODO
   Control sounds
   Highlight keywords
 
-- HTTPS support
+- HTTPS support (only proxy, no filtering)
   It's sort of an extension to HTTP - you just send the proxy the request
   CONNECT home.netscape.com:443 HTTP/1.0\r\n\r\n
   and after reading all the response headers and a blank line you
   have a transparent connection
+
