@@ -14,5 +14,4 @@
 <filter name="Blocker"/>
 <filter name="BinaryCharFilter"/>
 <filter name="Header"/>
-<filter name="GifImage"/>
 </webcleaner>
