@@ -25,6 +25,7 @@ db_version 2.0
 #     `abort-remove' or `abort-deconfigure'.
 
 package=webcleaner
+PYTHON=/usr/bin/python2
 SITEPACKAGES="/usr/lib/python2.0/site-packages"
 DIRLIST="wc"
 FILELIST="_webcleaner2_configdata.py"
@@ -33,13 +34,13 @@ COMMAND="'import sys,py_compile;py_compile.compile(sys.argv[1])'"
 case "$1" in
     configure|abort-upgrade|abort-remove|abort-deconfigure)
         for i in $DIRLIST; do
-            python2 -O /usr/lib/python2.0/compileall.py -q $SITEPACKAGES/$i
-            python2 /usr/lib/python2.0/compileall.py -q $SITEPACKAGES/$i
+            $PYTHON -O /usr/lib/python2.0/compileall.py -q $SITEPACKAGES/$i
+            $PYTHON /usr/lib/python2.0/compileall.py -q $SITEPACKAGES/$i
         done
 	# use /bin/sh -c, otherwise I get a SyntaxError from Python
         for i in $FILELIST; do
-            /bin/sh -c "python2 -O -c $COMMAND $SITEPACKAGES/$i"
-            /bin/sh -c "python2 -c $COMMAND $SITEPACKAGES/$i"
+            /bin/sh -c "$PYTHON -O -c $COMMAND $SITEPACKAGES/$i"
+            /bin/sh -c "$PYTHON -c $COMMAND $SITEPACKAGES/$i"
         done
     ;;
     *)
