@@ -6,8 +6,10 @@ webcleaner (0.13) unstable; urgency=low
     xml files to be parsed correctly
   * fixed the parser so that <tag/> tags are handled correctly
   * implemented Windows-specific daemon handler functions
+  * Remove GIF image filtering from default config. Mozilla provides
+    this itself :)
 
- -- Bastian Kleineidam <calvin@debian.org>  Fri,  1 Jun 2001 21:47:37 +0200
+ -- Bastian Kleineidam <calvin@debian.org>  Mon, 30 Jul 2001 22:01:56 +0200
 
 webcleaner (0.12) unstable; urgency=low
 
